--- a/plays/task6.yml
+++ b/plays/task6.yml
@@ -29,24 +29,24 @@
 
     - name: Generate an OpenSSL private key.
       openssl_privatekey:
-        path: "../files/{{ app }}_privkey.pem"
+        path: "../files/{{ app }}_privkey.key"
 
     - name: Generate an OpenSSL CSR.
       openssl_csr:
         path: "../files/{{ app }}_csr.csr"
-        privatekey_path: "../files/{{ app }}_privkey.pem"
+        privatekey_path: "../files/{{ app }}_privkey.key"
         common_name: "{{ app }}.example.com"
 
     - name: Generate a Self Signed OpenSSL certificate.
       openssl_certificate:
-        path: "../files/{{ app}}_fullchain.pem"
-        privatekey_path: "../files/{{ app }}_privkey.pem"
+        path: "../files/{{ app}}_fullchain.crt"
+        privatekey_path: "../files/{{ app }}_privkey.key"
         csr_path: "../files/{{ app }}_csr.csr"
         provider: selfsigned
 
-    - set_fact:
-        certificate: "{{ lookup('file','../files/{{ app }}_fullchain.pem') }}"
-        privkey: "{{ lookup('file','../files/{{ app }}_privkey.pem') }}"
+    #- set_fact:
+        #certificate: "{{ lookup('file','../files/{{ app }}_fullchain.crt', split_lines=False) }}"
+        #privkey: "{{ lookup('file','../files/{{ app }}_privkey.key', split_lines=False) }}"
 
     - name: Get Authentication Token for BIG-IQ Login
       uri:
@@ -68,8 +68,9 @@
         method: POST
         status_code: 200,202
         timeout: 300
-        body: "{{ lookup('template', '../templates/as3_https.j2') }}"
+        body: "{{ lookup('template', '../templates/as3_https.j2',split_lines=False) }}"
         body_format: json
         force_basic_auth: no
         validate_certs: no
       register: as3_output
+      delegate_to: localhost
